--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="carta">
-    <h1>¡Hola!</h1>
+    <h1>HOLIIIIIIIII</h1>
     <p>Esta es una carta animada hecha con cariño 💌</p>
   </div>
 </body>
