--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Carta Animada</title>
+  <title>Carta Animada con Flores</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
+  <div class="flores">
+    <div class="flor flor1"></div>
+    <div class="flor flor2"></div>
+    <div class="flor flor3"></div>
+    <div class="flor flor4"></div>
+  </div>
   <div class="carta">
-    <h1>HOLIIIIIIIII</h1>
+    <h1>¡Hola!</h1>
     <p>Esta es una carta animada hecha con cariño 💌</p>
   </div>
 </body>
