--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="flor flor4"></div>
   </div>
   <div class="carta">
-    <h1>¡Hola!</h1>
+    <h1>HOLIIIIIIIIII</h1>
     <p>Esta es una carta animada hecha con cariño 💌</p>
   </div>
 </body>
