--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Carta Animada con Flores</title>
+  <title>Carta</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
     <div class="flor flor4"></div>
   </div>
   <div class="carta">
-    <h1>HOLIIIIIIIIII</h1>
+    <h1>¡Hola!</h1>
     <p>Esta es una carta animada hecha con cariño 💌</p>
   </div>
 </body>
