--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Carta</title>
-  <link rel="stylesheet" href="estilo.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Para responsive -->
+  <title>Carta Animada</title>
+  <link rel="stylesheet" href="estilo.css"> <!-- Ruta corregida -->
 </head>
 <body>
   <div class="flores">
@@ -13,7 +14,7 @@
     <div class="flor flor4"></div>
   </div>
   <div class="carta">
-    <h1>¡Hola!</h1>
+    <h1>HOLIIIIIIIIIIIIIII</h1>
     <p>Esta es una carta animada hecha con cariño 💌</p>
   </div>
 </body>
