--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Para responsive -->
   <title>Carta Animada</title>
-  <link rel="stylesheet" href="estilo.css"> <!-- Ruta corregida -->
+  <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   <div class="flores">
