--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Para responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Carta Animada</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
@@ -17,6 +17,21 @@
     <h1>HOLIIIIIIIIIIIIIII</h1>
     <p>Esta es una carta animada hecha con cariño 💌</p>
   </div>
+</body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Carta Animada</title>
+  <style>
+    body { background: pink; } /* ¡Esto debe verse ROSADO! */
+  </style>
+</head>
+<body>
+  <h1>¡PRUEBA!</h1>
+  <p>Si ves fondo ROSADO, GitHub Pages está funcionando.</p>
 </body>
 </html>
 
