--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carta Animada</title>
+  <!-- Ruta CORRECTA para GitHub Pages -->
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
@@ -14,24 +15,8 @@
     <div class="flor flor4"></div>
   </div>
   <div class="carta">
-    <h1>HOLIIIIIIIIIIIIIII</h1>
+    <h1>¡Hola!</h1>
     <p>Esta es una carta animada hecha con cariño 💌</p>
   </div>
 </body>
-</html> -->
-
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Carta Animada</title>
-  <style>
-    body { background: pink; } /* ¡Esto debe verse ROSADO! */
-  </style>
-</head>
-<body>
-  <h1>¡PRUEBA!</h1>
-  <p>Si ves fondo ROSADO, GitHub Pages está funcionando.</p>
-</body>
 </html>
-
