--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta Animada</title>
-  <!-- Ruta CORRECTA para GitHub Pages -->
+  <title>Carta Animada con Flores</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
