--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta Animada con Flores</title>
+  <title>Carta con Flores de 8 Pétalos</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   <div class="flores">
-    <div class="flor flor1"></div>
-    <div class="flor flor2"></div>
-    <div class="flor flor3"></div>
-    <div class="flor flor4"></div>
+    <div class="flor flor1">
+      <span></span><span></span><span></span><span></span>
+      <span></span><span></span><span></span><span></span>
+    </div>
+    <div class="flor flor2">
+      <span></span><span></span><span></span><span></span>
+      <span></span><span></span><span></span><span></span>
+    </div>
+    <div class="flor flor3">
+      <span></span><span></span><span></span><span></span>
+      <span></span><span></span><span></span><span></span>
+    </div>
+    <div class="flor flor4">
+      <span></span><span></span><span></span><span></span>
+      <span></span><span></span><span></span><span></span>
+    </div>
   </div>
   <div class="carta">
     <h1>¡Hola!</h1>
