--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta con Flores de 8 Pétalos</title>
+  <title>Carta con Flores Animadas</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
