--- a/index.html
+++ b/index.html
@@ -3,31 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta con Flores Animadas</title>
+  <title>Carta con Girasoles Animados</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <div class="flores">
-    <div class="flor flor1">
-      <span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span>
-    </div>
-    <div class="flor flor2">
-      <span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span>
-    </div>
-    <div class="flor flor3">
-      <span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span>
-    </div>
-    <div class="flor flor4">
-      <span></span><span></span><span></span><span></span>
-      <span></span><span></span><span></span><span></span>
-    </div>
+  <div class="girasoles">
+    <!-- 12 girasoles alrededor de la página -->
+    <div class="girasol g1"></div>
+    <div class="girasol g2"></div>
+    <div class="girasol g3"></div>
+    <div class="girasol g4"></div>
+    <div class="girasol g5"></div>
+    <div class="girasol g6"></div>
+    <div class="girasol g7"></div>
+    <div class="girasol g8"></div>
+    <div class="girasol g9"></div>
+    <div class="girasol g10"></div>
+    <div class="girasol g11"></div>
+    <div class="girasol g12"></div>
   </div>
   <div class="carta">
     <h1>¡Hola!</h1>
-    <p>Esta es una carta animada hecha con cariño 💌</p>
+    <p>Esta es una carta animada hecha con cariño 💛</p>
   </div>
 </body>
 </html>
