--- a/index.html
+++ b/index.html
@@ -3,22 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta con Girasoles Realistas</title>
+  <title>Carta con Girasoles Animados</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   <div class="girasoles">
-    <!-- 12 girasoles con pétalos realistas -->
+    <!-- Girasol 1 -->
     <div class="girasol g1">
       <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
       <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
       <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
       <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
     </div>
-    <!-- Repite para los otros 11 girasoles (g2 a g12) -->
-    <div class="girasol g2"><div class="petalo"></div>...</div>
-    <!-- ... -->
+    <!-- Girasol 2 -->
+    <div class="girasol g2">
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+    </div>
+    <!-- Girasoles 3 al 12 (repetir estructura) -->
+    <div class="girasol g3"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g4"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g5"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g6"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g7"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g8"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g9"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g10"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g11"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g12"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
   </div>
+
   <div class="carta">
     <h1>¡Hola!</h1>
     <p>Esta es una carta animada hecha con cariño 🌻</p>
