--- a/index.html
+++ b/index.html
@@ -3,26 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta con Girasoles Animados</title>
+  <title>Carta con Girasoles Perfectos</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   <div class="girasoles">
-    <!-- Girasol 1 -->
-    <div class="girasol g1">
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-    </div>
-    <!-- Girasol 2 -->
-    <div class="girasol g2">
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-    </div>
-    <!-- Girasoles 3 al 12 (repetir estructura) -->
+    <!-- 12 girasoles con posición corregida -->
+    <div class="girasol g1"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g2"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
     <div class="girasol g3"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
     <div class="girasol g4"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
     <div class="girasol g5"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
