--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 <body>
   <div class="girasoles">
     <!-- 16 girasoles perfectamente distribuidos -->
-    <div class="girasol g1"></div>
-    <div class="girasol g2"></div>
-    <div class="girasol g3"></div>
-    <div class="girasol g4"></div>
-    <div class="girasol g5"></div>
-    <div class="girasol g6"></div>
-    <div class="girasol g7"></div>
-    <div class="girasol g8"></div>
-    <div class="girasol g9"></div>
-    <div class="girasol g10"></div>
-    <div class="girasol g11"></div>
-    <div class="girasol g12"></div>
-    <div class="girasol g13"></div>
-    <div class="girasol g14"></div>
-    <div class="girasol g15"></div>
-    <div class="girasol g16"></div>
+    <div class="girasol g1"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g2"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g3"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g4"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g5"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g6"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g7"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g8"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g9"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g10"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g11"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g12"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g13"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g14"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g15"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g16"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
   </div>
 
   <div class="carta">
