--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta con Girasoles Perfectos</title>
+  <title>Carta con Campo de Girasoles</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   <div class="girasoles">
-    <!-- Girasol de prueba (solo uno para verificar) -->
-    <div class="girasol">
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
-    </div>
+    <!-- 12 girasoles alrededor de la pantalla -->
+    <div class="girasol g1"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g2"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g3"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g4"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g5"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g6"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g7"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g8"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g9"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g10"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g11"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+    <div class="girasol g12"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
   </div>
+
   <div class="carta">
     <h1>¡Hola!</h1>
     <p>Esta es una carta animada hecha con cariño 🌻</p>
