--- a/index.html
+++ b/index.html
@@ -3,29 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta con Campo de Girasoles</title>
+  <title>Carta Especial</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-  <div class="girasoles">
-    <!-- 12 girasoles alrededor de la pantalla -->
-    <div class="girasol g1"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g2"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g3"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g4"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g5"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g6"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g7"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g8"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g9"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g10"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g11"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
-    <div class="girasol g12"><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div><div class="petalo"></div></div>
+  <div class="decoracion">
+    <!-- 8 girasoles estáticos -->
+    <div class="girasol g1"></div>
+    <div class="girasol g2"></div>
+    <div class="girasol g3"></div>
+    <div class="girasol g4"></div>
+    <div class="girasol g5"></div>
+    <div class="girasol g6"></div>
+    <div class="girasol g7"></div>
+    <div class="girasol g8"></div>
+    
+    <!-- 4 ositos de peluche -->
+    <div class="osito o1">🧸</div>
+    <div class="osito o2">🧸</div>
+    <div class="osito o3">🧸</div>
+    <div class="osito o4">🧸</div>
   </div>
 
   <div class="carta">
     <h1>¡Hola!</h1>
-    <p>Esta es una carta animada hecha con cariño 🌻</p>
+    <p>Esta es una carta animada hecha con cariño 😊</p>
   </div>
 </body>
 </html>
