--- a/index.html
+++ b/index.html
@@ -3,22 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carta Especial</title>
+  <title>Carta Especial con Girasoles</title>
   <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
   <div class="decoracion">
-    <!-- 8 girasoles estáticos -->
-    <div class="girasol g1"></div>
-    <div class="girasol g2"></div>
-    <div class="girasol g3"></div>
-    <div class="girasol g4"></div>
-    <div class="girasol g5"></div>
-    <div class="girasol g6"></div>
-    <div class="girasol g7"></div>
-    <div class="girasol g8"></div>
+    <!-- Girasoles con pétalos individuales -->
+    <div class="girasol g1">
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+    </div>
+    <div class="girasol g2">
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+    </div>
+    <div class="girasol g3">
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+    </div>
+    <div class="girasol g4">
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+      <div class="petalo"></div><div class="petalo"></div><div class="petalo"></div>
+    </div>
     
-    <!-- 4 ositos de peluche -->
+    <!-- Ositos de peluche -->
     <div class="osito o1">🧸</div>
     <div class="osito o2">🧸</div>
     <div class="osito o3">🧸</div>
